k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
#     service 本身
      port: 6380
      targetPort: 6379
      nodePort: 30003
  type: NodePort
